# ConceptPortal

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .tmp-rsform-867-details.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  TODO.txt  docker-compose-dev.yml  docker-compose-prod-local.yml  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  updateProd.sh
rsconcept/backend/: !Readme.txt  .dev_secret_key  .dockerignore  .env.dev  .env.prod  .env.prod.local  .pylintrc  AGENTS.md  Dockerfile  LocalEnvSetup.ps1  entrypoint.sh  mypy.ini  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements.txt  requirements_dev.txt  run_testfile.py
rsconcept/backend/apps/oss/: admin.py  apps.py  urls.py
rsconcept/backend/apps/prompt/: admin.py  apps.py  urls.py
rsconcept/backend/apps/rsform/: admin.py  apps.py  graph.py  messages.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
rsconcept/backend/apps/rsmodel/: __init__.py  admin.py  (+2 more)
rsconcept/backend/cctext/: __init__.py  conceptapi.py  context.py  reference.py  resolver.py  rumodel.py  ruparser.py  syntax.py
rsconcept/backend/fixtures/: InitialData.json  load_commons.py
rsconcept/backend/import/: README.txt
rsconcept/backend/project/: docs_views.py  settings.py  urls.py  wsgi.py
rsconcept/backend/shared/: DBTester.py  EndpointTester.py  ExportCsvMixin.py  __init__.py  messages.py  permissions.py  portal_json.py  serializers.py  testing_utils.py  throttling.py  utility.py
(+3505 files in other folders)
